--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "styled-icons": "^10.45.0"
   },
   "devDependencies": {
     "babel-plugin-macros": "^3.1.0",
