--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "12.0.7",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0"
   },
   "devDependencies": {
-    "babel-plugin-macros": "^3.1.0",
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.9.0",
+    "eslint-config-next": "^12.1.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": ">=6",
     "lint-staged": ">=10",
-    "prettier": "2.5.1",
-    "tailwindcss": "^2.2.16",
-    "twin.macro": "^2.8.2"
+    "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.7",
+    "tailwind-styled-components": "^2.1.4",
+    "tailwindcss": "^3.0.23"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
@@ -36,10 +38,5 @@
     "tabWidth": 2,
     "semi": false,
     "singleQuote": true
-  },
-  "babelMacros": {
-    "twin": {
-      "preset": "styled-components"
-    }
   }
 }
