--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "styled-icons": "^10.45.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
     "eslint-config-next": "^12.1.0",
