--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Setup Rust
         uses: actions-rs/toolchain@v1.0.6
+        with:
+          toolchain: stable
       - uses: Swatinem/rust-cache@v1.3.0
       - run: cargo install wasm-pack
 
