--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "farbenfroh.io",
+  "contributors": [
+    "winston <hey@winston.sh>"
+  ],
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,6 +14,23 @@
     "export": "next export",
     "prepare": "husky install"
   },
+  "eslintConfig": {
+    "extends": [
+      "next/core-web-vitals",
+      "prettier"
+    ]
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
+  },
+  "packageManager": "yarn@3.2.0",
   "dependencies": {
     "next": "^12.1.0",
     "react": "17.0.2",
@@ -31,21 +52,5 @@
     "prettier-plugin-tailwindcss": "^0.1.7",
     "tailwind-styled-components": "^2.1.4",
     "tailwindcss": "^3.0.23"
-  },
-  "eslintConfig": {
-    "extends": [
-      "next/core-web-vitals",
-      "prettier"
-    ]
-  },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
-  },
-  "prettier": {
-    "trailingComma": "es5",
-    "tabWidth": 2,
-    "semi": false,
-    "singleQuote": true
   }
 }
