--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:wasm": "cargo watch -i README.md -i .gitignore -i 'pkg/*' -s 'wasm-pack build --no-typescript'",
     "build": "next build",
     "build:wasm": "wasm-pack build --no-typescript",
     "start": "next start",
