--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 iced = "0.4"
 native-dialog = {version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"]}
+faerber = { path = "faerber_rs" }
