--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:wasm": "cargo watch -i README.md -i .gitignore -i 'pkg/*' -s 'wasm-pack build --no-typescript'",
-    "build": "next build",
+    "build": "yarn build:wasm; next build",
     "build:wasm": "wasm-pack build --no-typescript",
     "start": "next start",
     "lint": "next lint",
@@ -54,6 +54,7 @@
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "vercel": "^28.5.5"
   }
 }
