--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 "deltae" = "0.3.0"
-"image" = "0.24.1"
+"image" = {version = "0.24.5", features = ["png"] }
 "lab" = "0.11.0"
-"wasm-bindgen" = "0.2.80"
-"rayon" = "1.5.2"
+"wasm-bindgen" = "0.2.83"
+"rayon" = "1.5.3"
 "wasm-bindgen-rayon" = "1.0.3"
 
 [profile.release]
