--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@svgr/webpack": "^6.5.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.27.0",
     "eslint-config-next": "^13.0.4",
@@ -56,6 +58,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
     "vercel": "^28.5.5"
   }
 }
