--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:wasm": "cargo watch -i README.md -i .gitignore -i 'pkg/*' -s 'wasm-pack build --no-typescript --target web --profiling'",
+    "dev:wasm": "cargo watch -i README.md -i .gitignore -i 'pkg/*' -s 'wasm-pack build --target web --profiling'",
     "build": "yarn build:wasm; next build",
-    "build:wasm": "wasm-pack build --no-typescript --target web --release",
+    "build:wasm": "wasm-pack build --target web --release",
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
