--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,11 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 "deltae" = "0.3.0"
-"image" = {version = "0.24.5", features = ["png"] }
+"image" = {version = "0.24.5", features = [], default-features = false}
 "lab" = "0.11.0"
-"wasm-bindgen" = "0.2.83"
+"lazy_static" = "1.4.0"
 "rayon" = "1.5.3"
+"wasm-bindgen" = "0.2.83"
 "wasm-bindgen-rayon" = "1.0.3"
 
 [profile.release]
