ci: manually specify same nightly channel in workflow
Rust CI is a pain again. @actions-rs/toolchain doesn't detect `rust-toolchain` in TOML format.

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,6 +17,9 @@ jobs:
 
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly-2022-11-17
+          target: wasm32-unknown-unknown
 
       - uses: Swatinem/rust-cache@v2
 
