--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,5 @@
 [toolchain]
+# remember to update in GitHub Actions workflow file
 channel = "nightly-2022-11-17"
 targets = [ "wasm32-unknown-unknown" ]
 profile = "minimal"
