--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
+    "classnames": "^2.3.2",
     "comlink": "^4.3.1",
     "next": "^13.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.1",
