build(nix): add flake

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,6 +1,6 @@
 [toolchain]
 # remember to update in GitHub Actions workflow file
 channel = "nightly-2022-11-17"
-targets = [ "wasm32-unknown-unknown" ]
+targets = ["wasm32-unknown-unknown"]
 profile = "minimal"
-components = [ "rustfmt", "rust-src" ]
+components = ["clippy", "rustfmt", "rust-src"]
