--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# nix
+.direnv/
+.pre-commit-config.yaml
+result/
