--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,13 +15,23 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
+      - name: Restore cargo cache
+        uses: actions/cache@v3
         with:
-          toolchain: nightly-2022-03-10
-          target: wasm32-unknown-unknown
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - uses: Swatinem/rust-cache@v2
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          components: clippy, rustfmt
+          targets: wasm32-unknown-unknown
+          toolchain: nightly-2022-03-10
 
       - name: Install wasm-pack
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
@@ -29,7 +39,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
           cache: 'yarn'
 
       - name: Pull Vercel Environment Information
