--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
+    "@vercel/analytics": "^1.0.0",
     "classnames": "^2.3.2",
     "comlink": "^4.4.1",
     "next": "^13.3.1",
