--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
-    "@vercel/analytics": "^1.0.0",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
+    "@vercel/analytics": "^1.0.1",
     "classnames": "^2.3.2",
     "comlink": "^4.4.1",
-    "next": "^13.3.1",
+    "next": "^13.4.1",
+    "next-seo": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "usehooks-ts": "^2.9.1"
@@ -49,19 +52,19 @@
     "@svgr/webpack": "^7.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18.16.0",
-    "@types/react": "^18.0.38",
+    "@types/node": "^18.16.4",
+    "@types/react": "^18.2.5",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
-    "eslint-config-next": "^13.3.1",
+    "eslint-config-next": "^13.4.1",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.1",
+    "lint-staged": "^13.2.2",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.7",
-    "tailwindcss": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
-    "vercel": "^28.20.0"
+    "vercel": "^29.1.1"
   }
 }
